# convex_hull

./: CMakeLists.txt
examples/: circle.txt  parabola.txt  square.txt  star.txt  triangle
src/: convex_hull.cpp  convex_hull.h  main.cpp  test.cpp  window.h
